--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body{
 }
 
 /* Hamburger Menu */
-.menu-toggel {
+.menu-toggle {
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -113,7 +113,7 @@ body{
     z-index: 999;
 }
 
-.menu-toggel span {
+.menu-toggle span {
     display: block;
     width: 28px;
     height: 3px;
@@ -122,7 +122,7 @@ body{
     transition: all 0.5s;
 }
 
-.menu-toggel input {
+.menu-toggle input {
     display: block;
     position: absolute;
     background-color: black;
@@ -136,7 +136,7 @@ body{
 }
 
 /* Hamburger Menu Animation */
-.menu-toggel span:nth-child(2) {
+.menu-toggle span:nth-child(2) {
     transform-origin: 0 0;
 }
 .menu-toggle span:nth-child(4){
@@ -153,7 +153,7 @@ body{
     transform: rotate(-45deg) translate(-1px, 0);
 }
 
-.menu-toggel input:checked ~ span:nth-child(3) {
+.menu-toggle input:checked ~ span:nth-child(3) {
     opacity: 0;
     transform: scale(0);
 }
